--- a/d3Demo.html
+++ b/d3Demo.html
@@ -11,6 +11,8 @@
         html,
         body {
             overflow: hidden;
+            background: grey;
+            /* background: url("./background.jpg") no-repeat; */
         }
     </style>
 </head>
@@ -19,7 +21,6 @@
     <svg id="canvas"></svg>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/victor/1.1.0/victor.js"></script>
     <script src="./d3Demo.js"></script>
     
 </body>
